// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature/> renders the <Feature/> only title 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 isjLws"
>
  <h1
    class="feature__Title-sc-6swrp6-1 biQKvD"
  >
    Unlimited Films, TV programmes & more.
  </h1>
</div>
`;

exports[`<Feature/> renders the <Feature/> with data 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 isjLws"
>
  <h1
    class="feature__Title-sc-6swrp6-1 biQKvD"
  >
    Unlimited Films, TV programmes & more.
  </h1>
  <h2
    class="feature__SubTitle-sc-6swrp6-2 bONLfr"
  >
    Watch anywhere. Cancel at anytime.
  </h2>
</div>
`;
